# devblog

./: BUILD.bazel  MODULE.bazel  go.mod  go.sum  python_deps.txt
bzl/: mkdocs.bzl
site/: BUILD.bazel  mkdocs.yml
site/src/: index.md
site/src/posts/: first_post.md
staticserve/: BUILD.bazel  main.go
