load("@gazelle//:def.bzl", "gazelle")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("@rules_python//python/entry_points:py_console_script_binary.bzl", "py_console_script_binary")

compile_pip_requirements(
    name = "python_deps",
    src = "python_deps.in",
    requirements_txt = "python_deps.txt",
)

py_console_script_binary(
    name = "mkdocs",
    pkg = "@pypi//mkdocs",
    visibility = ["//visibility:public"],
)

# gazelle:prefix github.com/minorhacks/devblog
gazelle(
    name = "go_build_update",
)
